# hef-metrics-generator

./: .gitignore  README.md  pyproject.toml
src/hef_metrics_generator/: __init__.py
src/hef_metrics_generator/config/: config.py
src/hef_metrics_generator/core/: generate.py  llm_provider.py
src/hef_metrics_generator/logs/: default_logger.py  tool_query_logger.py
src/hef_metrics_generator/schemas/: context.py  metric.py  output.py
src/hef_metrics_generator/tools/: arxiv_tool.py  ddg_tool.py  openalex_tool.py  pubmed_tool.py  semantic_scholar_tool.py  tool_registry.py
src/hef_metrics_generator/utils/: constants.py  http_retry.py
src/hef_metrics_generator/validators/: tool_validator.py
tests/: integration_test.py
tests/query_logs/: 2025-08-21_13-58-33.txt  2025-08-21_14-12-16.txt  2025-08-21_14-25-02.txt  2025-08-21_16-31-39.txt  2025-08-21_16-38-19.txt
